--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
     <maven.compiler.source>11</maven.compiler.source>
     <maven.compiler.target>11</maven.compiler.target>
     <spring.version>5.2.2.RELEASE</spring.version>
-    <jackson2.version>2.8.6</jackson2.version>
+    
     <failOnMissingWebXml>false</failOnMissingWebXml>
   </properties>
 
@@ -145,7 +145,13 @@
             <artifactId>spring-orm</artifactId>
             <version>${spring.version}</version>
         </dependency>
-
+		
+		<!-- jackson 모듈 -->
+		<dependency>
+    <groupId>com.fasterxml.jackson.core</groupId>
+    <artifactId>jackson-databind</artifactId>
+    <version>2.12.3</version>
+</dependency>
   </dependencies>
 
   <build>
